--- a/public/index.html
+++ b/public/index.html
@@ -59,10 +59,10 @@
         <div class='parallax'>
           <h1>VISION & MISSION</h1>
           <p>
-            <span class='red fs17'>•</span> ดำเนินธุรกิจโรงละครด้วยมาตรฐานระดับโลก <br>
-            <span class='red fs17'>•</span> รังสรรค์การแสดงเหนือจินตนาการผสมผสานความเป็นไทยด้วยเทคโนโลยีล้ำสมัย<br>
-            &nbsp&nbspจากการผสมผสานกันระหว่างสุดยอดของศาสตร์และศิลป์<br>
-            <span class='red fs17'>•</span> บริการผนวกความคิดสร้างสรรค์ที่จะทำให้ผู้ที่มาเยือนประทับใจในคุณค่าและเสน่ห์ของความเป็นไทย
+            <span class='fs17'>•</span> ดำเนินธุรกิจโรงละครด้วยมาตรฐานระดับโลก <br>
+            <span class='fs17'>•</span> รังสรรค์การแสดงเหนือจินตนาการผสมผสานความเป็นไทยด้วยเทคโนโลยีล้ำสมัย<br>
+            &nbsp;&nbsp;จากการผสมผสานกันระหว่างสุดยอดของศาสตร์และศิลป์<br>
+            <span class='fs17'>•</span> บริการผนวกความคิดสร้างสรรค์ที่จะทำให้ผู้ที่มาเยือนประทับใจในคุณค่าและเสน่ห์ของความเป็นไทย
           </p>
         </div>
       </section>
@@ -70,40 +70,39 @@
         <div class='nav-hidden-name'>corporate<br>value</div>
         <div class='parallax'>
           <h1>CORPORATE VALUE</h1>
-          <div class='video-container'>
-            <video id='punjaluck-animate'>
-              <source src="./images/PJL Logo.mp4" type="video/mp4" />
-            </video>
-          </div>
+          <img src="" class="logo-fade-1"/>
+          <img src="" class="logo-fade-2"/>
           <div class='corporate-quote'>
             <div class='logo'>
               <img src='./images/logo/pun_circle.png' />
             </div>
-            <div class='quotes'>
-              <span>
-                Our <span class="red">C</span>reativity
+            <div class='quotes-container'>
+              <div class='quotes'>
+                <span>
+                  Our <span class="red">C</span>reativity
+                  <br />
+                  <span class="red">H</span>appiness and Fun
+                  <br />
+                  <span class="red">R</span>emarkable show
+                  <br /> Service <span class="red">M</span>ind and <span class="red">A</span>mbition
+                  <br />
+                </span>
+                <span>
+                  "อลังการงารสร้างสรรค์ <br />
+                  เสน่ห์ไทยคือหน้าตา
+                </span>
+              </div>
+              <div class='quotes'>
+                second to none
+                <br /> our staff
+                <br /> represents Thainess
+                <br /> our key to success
                 <br />
-                <span class="red">H</span>appiness and Fun
-                <br />
-                <span class="red">R</span>emarkable show
-                <br /> Service <span class="red">M</span>ind and <span class="red">A</span>mbition
-                <br />
-              </span>
-              <span>
-                "อลังการงารสร้างสรรค์ <br />
-                เสน่ห์ไทยคือหน้าตา
-              </span>
-            </div>
-            <div class='quotes'>
-              second to none
-              <br /> our staff
-              <br /> represents Thainess
-              <br /> our key to success
-              <br />
-              <span>
-                รวมใจฝันสู่วันหน้า <br />
-                มุ่งพัฒนาบริการ"
-              </span>
+                <span>
+                  รวมใจฝันสู่วันหน้า <br />
+                  มุ่งพัฒนาบริการ"
+                </span>
+              </div>
             </div>
             <div class='charm'>
               <div class='letter'>
@@ -163,18 +162,16 @@
             <div class='modal-hide'>
               <div class='x-modal'>X</div>
               <img src="./images/Untitled-4.png" />
-              <div class="k-detail modal-content">
+              <div class='board-detail modal-content'>
+                <img src="./images/left-quote.png" width="35" />
                 <p>
-                  <img src='./images/left-quote.png' width="35" style='margin-top: -15px;'/>
-                  <span>
-                    อุตสาหกรรมบันเทิงไทยมีศักยภาพที่จะไปแข่งขัน<br>บนเวทีโลกได้อย่างภาคภูมิและไม่แพ้ใคร เราตั้งใจสร้าง<br>KAAN Show
-                    ให้เป็นนวัตกรรมการท่องเที่ยวที่เกิดจากฝีมือ<br>ความคิดสร้างสรรค์ของคนไทย และมุ่งให้การแสดงนี้<br>กลายเป็น Highlight Destination
-                    ใหม่ที่น่าสนใจในระดับโลก
-                  </span>
-                  <img src='./images/right-quote.png' width="35" style='margin-bottom: 10px;'/>
+                  อุตสาหกรรมบันเทิงไทยมีศักยภาพที่จะไปแข่งขัน<br>บนเวทีโลกได้อย่างภาคภูมิและไม่แพ้ใคร เราตั้งใจสร้าง<br>KAAN Show
+                  ให้เป็นนวัตกรรมการท่องเที่ยวที่เกิดจากฝีมือ<br>ความคิดสร้างสรรค์ของคนไทย และมุ่งให้การแสดงนี้<br>กลายเป็น Highlight Destination
+                  ใหม่ที่น่าสนใจในระดับโลก
                 </p>
-                <div class="grey uppercase">ศิริวัฒน์ วงศ์จารุกร (SIRIWAT VONGJARUKORN)</div>
-                <div class='grey uppercase'>
+                <img src='./images/right-quote.png' width="35" style='margin-bottom: 10px;'/>
+                <div class="grey uppercase">ศิริวัฒน์ วงศ์จารุกร<br>(SIRIWAT VONGJARUKORN)</div>
+                <div class='grey uppercase position'>
                   CHAIRMAN OF THE BOARD
                 </div>
               </div>
@@ -185,8 +182,8 @@
               <div class='x-modal'>X</div>
               <img src="./images/girl.png" />
               <div class="board-detail modal-content">
+                <img src='./images/left-quote.png' width="35"/>
                 <p>
-                  <img src='./images/left-quote.png' width="35" style='margin-top: -15px;'/>
                   <span>
                     เราเคยมีประสบการณ์ทำงานด้านภาพยนตร์ไทยมาแล้ว<br>ก็เลยอยากลองทำ
                     Content ในรูปแบบอื่นดูบ้าง เราเลยไปชวนคนเก่งๆ<br>
@@ -195,10 +192,10 @@
                     จะเซ็ทมาตรฐานใหม่ของการแสดงในเมืองไทย<br>
                     ที่ทั้งชาวไทยและชาวต่างชาติจะต้องยอมรับในฝีมือ
                   </span>
-                  <img src='./images/right-quote.png' width="35" style='margin-bottom: 10px;'/>
                 </p>
-                <div class="uppercase grey">จินา โอสถศิลป์ (Jina Osothsilp)</div>
-                <div class='grey uppercase'>
+                <img src='./images/right-quote.png' width="35" style='margin-bottom: 10px;'/>
+                <div class="uppercase grey">จินา โอสถศิลป์<br>(Jina Osothsilp)</div>
+                <div class='grey uppercase position'>
                   EXECUTIVE COMMITEE
                 </div>
               </div>
@@ -209,19 +206,17 @@
               <div class='x-modal'>X</div>
               <img src="./images/board-glass.png" />
               <div class="board-detail modal-content">
+                <img src='./images/left-quote.png' width="35"/>
                 <p>
-                  <img src='./images/left-quote.png' width="35" style='margin-top: -15px;'/>
-                  <span>
-                    คำจำกัดความของ KAAN Show คือ A Spectacular<br>
-                    Cinematic Live Experience การแสดงที่ผสมผสานเทคนิคระดับโลก<br>
-                    เข้ากับภาพยนตร์และการแสดงสดบนเวที ซึ่งเป็นสิ่งที่ไม่เคยเกิดขึ้นมาก่อน<br>
-                    ในเมืองไทยเราจึงต้องระดมคนเก่งที่สุดในแต่ละด้านกว่า 600 ชีวิต<br>
-                    ที่เรียกได้ว่าเป็นทีมชาติฝั่งเอ็นเตอร์เทนเมนท์ของประเทศไทย<br>
-                    เราตั้งใจสร้างสรรค์ให้การแสดงนี้เป็นฝีมือคนไทยที่ไปไกลระดับโลก
-                  </span>
-                  <img src='./images/right-quote.png' width="35" style='margin-bottom: 10px;'/>
+                  คำจำกัดความของ KAAN Show คือ A Spectacular<br>
+                  Cinematic Live Experience การแสดงที่ผสมผสานเทคนิคระดับโลก<br>
+                  เข้ากับภาพยนตร์และการแสดงสดบนเวที ซึ่งเป็นสิ่งที่ไม่เคยเกิดขึ้นมาก่อน<br>
+                  ในเมืองไทยเราจึงต้องระดมคนเก่งที่สุดในแต่ละด้านกว่า 600 ชีวิต<br>
+                  ที่เรียกได้ว่าเป็นทีมชาติฝั่งเอ็นเตอร์เทนเมนท์ของประเทศไทย<br>
+                  เราตั้งใจสร้างสรรค์ให้การแสดงนี้เป็นฝีมือคนไทยที่ไปไกลระดับโลก
                 </p>
-                <div class="grey uppercase">ยงยุทธ ทองกองทุน (Yongyoot Thongkongtoon)</div>
+                <img src='./images/right-quote.png' width="35" style='margin-bottom: 10px;'/>
+                <div class="grey uppercase">ยงยุทธ ทองกองทุน<br>(Yongyoot Thongkongtoon)</div>
                 <div class='grey uppercase'>
                   Executive Committee, Producer and Artistic Director
                 </div>
@@ -254,19 +249,17 @@
               <div class='x-modal'>X</div>
               <img src="./images/tanapol.png" />
               <div class="board-detail modal-content">
+                <img src='./images/left-quote.png' width="35"/>
                 <p>
-                  <img src='./images/left-quote.png' width="35" style='margin-top: -15px;'/>
-                  <span>
-                    อุตสาหกรรมบันเทิงเป็นธุรกิจที่มีมูลค่าสูงและมีแนวโน้มเติบโต<br>
-                    ได้อย่างไม่จำกัด เราทำ KAAN Show ขึ้นเพื่อตั้งใจสร้างมูลค่า<br>
-                    ให้กับความคิดสร้างสรรค์ของคนไทยให้ทั่วโลกยอมรับและเห็นคุณค่า<br>
-                    มูลค่าที่ได้กลับมาไม่ใช่เพียงเม็ดเงินมหาศาลเท่านั้น<br>
-                    แต่จะสร้างผลประโยชน์ด้านอื่นๆ อีกมากมายให้กับประเทศไทยด้วย
-                  </span>
-                  <img src='./images/right-quote.png' width="35" style='margin-bottom: 10px;'/>
+                  อุตสาหกรรมบันเทิงเป็นธุรกิจที่มีมูลค่าสูงและมีแนวโน้มเติบโต<br>
+                  ได้อย่างไม่จำกัด เราทำ KAAN Show ขึ้นเพื่อตั้งใจสร้างมูลค่า<br>
+                  ให้กับความคิดสร้างสรรค์ของคนไทยให้ทั่วโลกยอมรับและเห็นคุณค่า<br>
+                  มูลค่าที่ได้กลับมาไม่ใช่เพียงเม็ดเงินมหาศาลเท่านั้น<br>
+                  แต่จะสร้างผลประโยชน์ด้านอื่นๆ อีกมากมายให้กับประเทศไทยด้วย
                 </p>
-                <div class="grey uppercase">ธนพล วิระเทพสุภรณ์ (Tanapol Viratepsuporn)</div>
-                <div class='grey uppercase'>
+                <img src='./images/right-quote.png' width="35" style='margin-bottom: 10px;'/>
+                <div class="grey uppercase">ธนพล วิระเทพสุภรณ์<br>(Tanapol Viratepsuporn)</div>
+                <div class='grey uppercase position'>
                   Chief Commercial Officer
                 </div>
               </div>
@@ -277,21 +270,19 @@
               <div class='x-modal'>X</div>
               <img src="./images/anant.png" />
               <div class="board-detail modal-content">
+                <img src='./images/left-quote.png' width="35"/>
                 <p>
-                  <img src='./images/left-quote.png' width="35" style='margin-top: -15px;'/>
-                  <span>
-                    เป้าหมายของ KAAN คือการเป็นโชว์อันดับหนึ่งของเอเชีย<br>
-                    และทำให้ D’LUCK Cinematic Theatre กลายเป็นแหล่งท่องเที่ยวแห่งใหม่<br>
-                    ของไทยที่ดึงดูดนักท่องเที่ยวจากทั่วโลกรวมถึงสร้างรายได้ให้กับประเทศ<br>
-                    เราตั้งใจสร้างสรรค์การแสดงนี้ให้ได้มาตรฐานระดับโลกในทุกๆ ด้าน<br>
-                    ไม่ว่าจะเป็นเทคโนโลยี, โปรดักชั่น, ตลอดจนทีมงานคุณภาพที่รวบรวม<br>
-                    สุดยอดฝีมือของไทยหลายๆด้านเข้าด้วยกัน ที่สำคัญเราไม่ลืมสอดแทรก<br>
-                    เสน่ห์ความเป็นไทยเข้าไปในทุกการให้บริการของเรา<br>
-                    เพื่อให้ผู้ชมทุกคนประทับใจกับการสัมผัสประสบการณ์ที่แปลกใหม่นี้
-                  </span>
-                  <img src='./images/right-quote.png' width="35" style='margin-bottom: 10px;'/>
+                  เป้าหมายของ KAAN คือการเป็นโชว์อันดับหนึ่งของเอเชีย<br>
+                  และทำให้ D’LUCK Cinematic Theatre กลายเป็นแหล่งท่องเที่ยวแห่งใหม่<br>
+                  ของไทยที่ดึงดูดนักท่องเที่ยวจากทั่วโลก รวมถึงสร้างรายได้ให้กับประเทศ<br>
+                  เราตั้งใจสร้างสรรค์การแสดงนี้ให้ได้มาตรฐานระดับโลกในทุกๆ ด้าน<br>
+                  ไม่ว่าจะเป็นเทคโนโลยี, โปรดักชั่น, ตลอดจนทีมงานคุณภาพที่รวบรวม<br>
+                  สุดยอดฝีมือของไทยหลายๆ ด้านเข้าด้วยกัน ที่สำคัญเราไม่ลืมสอดแทรก<br>
+                  เสน่ห์ความเป็นไทยเข้าไปในทุกการให้บริการของเรา<br>
+                  เพื่อให้ผู้ชมทุกคนประทับใจกับการสัมผัสประสบการณ์ที่แปลกใหม่นี้
                 </p>
-                <div class="grey uppercase">กานต์กฤดิชย์ นิ่มสมบุญ (Karnkridit Nimsombun)</div>
+                <img src='./images/right-quote.png' width="35" style='margin-bottom: 10px;'/>
+                <div class="grey uppercase">กานต์กฤดิชย์ นิ่มสมบุญ<br>(Karnkridit Nimsombun)</div>
                 <div class='grey uppercase'>
                   Managing Director
                 </div>
@@ -424,7 +415,7 @@
               <img src="./images/logo/A49@1x.png"/>
               <div class="partner-detail modal-content">
                 <h2>บริษัท สถาปนิก 49 จำกัด</h2>
-                <div class='sub-title'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;ผู้นําความคิดทางด้านสถาปัตยกรรมของประเทศไทย</div>
+                <div class='sub-title'>ผู้นําความคิดทางด้านสถาปัตยกรรมของประเทศไทย</div>
                 <p>
                 บริษัทสถาปนิกชั้นนำของประเทศไทย ที่มีชื่อเสียงโด่งดังระดับโลก<br>
                 ผู้ออกแบบ D’LUCK Cinematic Theatre ภายใต้แนวคิด “Levitation”<br>
@@ -443,7 +434,7 @@
               <img src="./images/logo/Master_SANOOKDEE_30x27cm.png"/>
               <div class="partner-detail modal-content">
                 <h2>บริษัท สนุกดีทวีสุข จำกัด</h2>
-                <div class='sub-title'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;บริษัทสร้างสรรค์ความสนุก เสิร์ฟประสบการณ์แปลกใหม่<br>ไม่ซ้ำใคร </div>
+                <div class='sub-title'>บริษัทสร้างสรรค์ความสนุก เสิร์ฟประสบการณ์แปลกใหม่<br>ไม่ซ้ำใคร </div>
                 <p>
                   สนุกดีทวีสุข ผู้รับผิดชอบงานสร้างสรรค์ ตั้งแต่ขั้นตอนการทำ<br>บทละคร จนถึงการถ่ายทอดจินตนาการออกมาเป็นความมหัศจรรย์<br>
                   บนเวที KAAN Show
@@ -457,7 +448,7 @@
               <img src="./images/logo/XTP official logo.png"/>
               <div class="partner-detail modal-content">
                 <h2>บริษัท เอ็กซ์ทรีมพลัส จำกัด</h2>
-                <div class='sub-title'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;ผู้เชี่ยวชาญ ด้านการสร้างสรรค์และการจัดสร้างเทคโนโลยีเพื่อความตื่นตาตื่นใจ (Immersive Technology)</div>
+                <div class='sub-title'>ผู้เชี่ยวชาญ ด้านการสร้างสรรค์และการจัดสร้างเทคโนโลยีเพื่อความตื่นตาตื่นใจ (Immersive Technology)</div>
                 <p>
                   ผู้ออกแบบ สร้างสรรค์ สรรหา เทคโนโลยีระดับโลกต่างๆ ตลอดจนดูแล<br>
                   การผลิตและจัดสร้าง ทั้ง Projection mapping, Animatronic,<br>
@@ -483,12 +474,12 @@
               <img src="./images/logo/logo baanrig 2012@1x.png"/>
               <div class="partner-detail modal-content">
                 <h2>บริษัท บ้านริก จำกัด</h2>
-                <div class='sub-title'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;ผู้เชี่ยวชาญด้านระบบสลิง Special effect แมคคาทรอนิคส์<br>และระบบ Rigging Theatre ที่มีชื่อเสียงในระดับสากล</div>
+                <div class='sub-title'>ผู้เชี่ยวชาญด้านระบบสลิง Special effect แมคคาทรอนิคส์<br>และระบบ Rigging Theatre ที่มีชื่อเสียงในระดับสากล</div>
                 <p>
                   จากประสบการณ์การทำงานร่วมกับชาวไทยและชาวต่างชาติมาหลายสิบปี<br>
-                  ทีมบ้านริกรับหน้าที่ดูแลและจัดการเรื่องเทคนิคพิเศษต่างๆของโชว์<br>
+                  ทีมบ้านริกรับหน้าที่ดูแลและจัดการเรื่องเทคนิคพิเศษต่างๆ ของโชว์<br>
                   รวมทั้งระบบ Theatre System ของ D’LUCK Cinematic Theatre<br>
-                  เพื่อให้ KAAN เป็นโชว์ที่สร้างความตื่นตาตื่นใจให้กับคนดูทุกๆนาที โดยที่มีความปลอดภัยในการแสดงอย่างสูงสุด
+                  เพื่อให้ KAAN เป็นโชว์ที่สร้างความตื่นตาตื่นใจให้กับคนดูทุกๆ นาที โดยที่มีความปลอดภัยในการแสดงอย่างสูงสุด
                 </p>
                 <a target='_blank' href='http://www.baanrig.com'>
                 <div class="web-icon">
@@ -504,7 +495,7 @@
               <img src="./images/logo/logo-scenario.png"/>
               <div class="partner-detail modal-content">
                 <h2>บริษัท ซีเนริโอ จำกัด</h2>
-                <div class='sub-title'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;ผู้ผลิตละครเวที และ Live Show ชั้นนําของเมืองไทย<br>ที่มีประสบการณ์มากกว่า 10 ปี</div>
+                <div class='sub-title'>ผู้ผลิตละครเวที และ Live Show ชั้นนําของเมืองไทย<br>ที่มีประสบการณ์มากกว่า 10 ปี</div>
                 <p>
                   ทีม Scenario รับหน้าที่ในการวางแผนควบคุมดูแลนักแสดงและทีมงาน<br>
                   รวมถึงการออกแบบและบริหารจัดการ D’LUCK Cinematic Theatre<br>
@@ -529,9 +520,9 @@
               <img src="./images/logo/Panjalucl_Our Partner_RITTA logo.png"/>
               <div class="partner-detail modal-content">
                 <h2>บริษัท ฤทธา จำกัด</h2>
-                <div class='sub-title'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;บริษัทออกแบบและก่อสร้างอาคารมาตรฐานสูงของประเทศไทย</div>
+                <div class='sub-title'>บริษัทออกแบบและก่อสร้างอาคารมาตรฐานสูงของประเทศไทย</div>
                 <p>
-                  ผู้รับเหมาหลักของโครงการก่อสร้าง D’LUCK Cinematic Theatre<br>ด้วยมาตรฐาน คุณภาพและความปลอดภัยระดับสากล
+                  ผู้รับเหมาหลักของโครงการก่อสร้าง D’LUCK Cinematic Theatre<br>ด้วยมาตรฐาน คุณภาพ และความปลอดภัยระดับสากล
                 </p>
                 <div class="web-icon">
                   <a target='_blank' href='http://www.ritta.co.th/'><img src='./images/KAAN Web_Icon Link to Website_ch_20161007.png' /></a>
