--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
   <div class='container'>
     <div class='nav-bar'>
       <div class='nav-bar__logo'>
-        <img src='./images/logo/logo_resize.png'>
+        <a href='./'><img src='./images/logo/logo_resize.png'></a>
       </div>
       <div id="hamberger-menu">
         <span></span>
@@ -29,12 +29,12 @@
         <span></span>
       </div>
       <div class='nav-bar__navigation-container'>
-        <span class='nav-bar__navigation'>KAAN SHOW</span>
+        <a href='https://kaanshow-ec4c0.firebaseapp.com/'><span class='nav-bar__navigation'>KAAN SHOW</span></a>
         <span class='nav-bar__navigation'>D'LUCK</span>
         <span class='nav-bar__navigation active'>PANJALUCK</span>
         <span class='nav-bar__navigation'>LANGUAGE</span>
         <span class='nav-bar__navigation'><i class='flaticon-search'></i></span>
-        <span class='nav-bar__navigation ticket'>TICKET</span>
+        <a href='https://kaanshow-ec4c0.firebaseapp.com/ticket/'><span class='nav-bar__navigation ticket'>TICKET</span></a>
       </div>
     </div>
     <div class='sections'>
@@ -55,6 +55,8 @@
         </div>
       </section>
       <section class='section' id='vision-page'>
+        <div class='vision-page-bg1'></div>
+        <div class='vision-page-bg1'></div>
         <div class='nav-hidden-name'>vision &<br>mission</div>
         <div class='parallax'>
           <h1>VISION & MISSION</h1>
@@ -160,9 +162,9 @@
           <h1>BOARD PROFILE</h1>
           <div class='modal-hide-container' id='modal-link--board1'>
             <div class='modal-hide'>
-              <div class='x-modal'>X</div>
-              <img src="./images/Untitled-4.png" />
-              <div class='board-detail modal-content'>
+              <div class='x-modal'><img src='./images/closeButtonBlack.png' /></div>
+              <div class="board-person-image" style='background-image:url("./images/Untitled-4.png")'></div>
+              <div class="board-detail modal-content">
                 <img src="./images/left-quote.png" width="35" />
                 <p>
                   อุตสาหกรรมบันเทิงไทยมีศักยภาพที่จะไปแข่งขัน<br>บนเวทีโลกได้อย่างภาคภูมิและไม่แพ้ใคร เราตั้งใจสร้าง<br>KAAN Show
@@ -179,19 +181,17 @@
           </div>
           <div class='modal-hide-container' id='modal-link--board2'>
             <div class='modal-hide'>
-              <div class='x-modal'>X</div>
-              <img src="./images/girl.png" />
+              <div class='x-modal'><img src='./images/closeButtonBlack.png' /></div>
+              <div class="board-person-image" style='background-image:url("./images/girl.png")'></div>
               <div class="board-detail modal-content">
                 <img src='./images/left-quote.png' width="35"/>
                 <p>
-                  <span>
-                    เราเคยมีประสบการณ์ทำงานด้านภาพยนตร์ไทยมาแล้ว<br>ก็เลยอยากลองทำ
-                    Content ในรูปแบบอื่นดูบ้าง เราเลยไปชวนคนเก่งๆ<br>
-                    ในสายเอนเตอร์เทนเมนท์มารวมตัวกันเพื่อสร้างสรรค์โชว์นี้ ซึ่งเราหวังว่า<br>
-                    KAAN Show โชว์ของคนไทยที่คิดและสร้างสรรค์โดยคนไทยนี้<br>
-                    จะเซ็ทมาตรฐานใหม่ของการแสดงในเมืองไทย<br>
-                    ที่ทั้งชาวไทยและชาวต่างชาติจะต้องยอมรับในฝีมือ
-                  </span>
+                  เราเคยมีประสบการณ์ทำงานด้านภาพยนตร์ไทยมาแล้ว ก็เลยอยากลอง<br>
+                  ทำContent ในรูปแบบอื่นดูบ้าง เราเลยไปชวนคนเก่งๆ<br>
+                  ในสายเอนเตอร์เทนเมนท์มารวมตัวกันเพื่อสร้างสรรค์โชว์นี้ ซึ่งเราหวังว่า<br>
+                  KAAN Show โชว์ของคนไทยที่คิดและสร้างสรรค์โดยคนไทยนี้<br>
+                  จะเซ็ทมาตรฐานใหม่ของการแสดงในเมืองไทย ที่ทั้งชาวไทย<br>
+                  และชาวต่างชาติจะต้องยอมรับในฝีมือ
                 </p>
                 <img src='./images/right-quote.png' width="35" style='margin-bottom: 10px;'/>
                 <div class="uppercase grey">จินา โอสถศิลป์<br>(Jina Osothsilp)</div>
@@ -203,8 +203,8 @@
           </div>
           <div class='modal-hide-container' id='modal-link--board3'>
             <div class='modal-hide'>
-              <div class='x-modal'>X</div>
-              <img src="./images/board-glass.png" />
+              <div class='x-modal'><img src='./images/closeButtonBlack.png' /></div>
+              <div class="board-person-image" style='background-image:url("./images/board-glass.png")'></div>
               <div class="board-detail modal-content">
                 <img src='./images/left-quote.png' width="35"/>
                 <p>
@@ -217,7 +217,7 @@
                 </p>
                 <img src='./images/right-quote.png' width="35" style='margin-bottom: 10px;'/>
                 <div class="grey uppercase">ยงยุทธ ทองกองทุน<br>(Yongyoot Thongkongtoon)</div>
-                <div class='grey uppercase'>
+                <div class='grey uppercase position'>
                   Executive Committee, Producer and Artistic Director
                 </div>
               </div>
@@ -225,29 +225,27 @@
           </div>
           <div class='modal-hide-container' id='modal-link--board4'>
             <div class='modal-hide'>
-              <div class='x-modal'>X</div>
-              <img src="./images/anant.png" />
+              <div class='x-modal'><img src='./images/closeButtonBlack.png' /></div>
+              <div class="board-person-image" style='background-image:url("./images/anant.png")'></div>
               <div class="board-detail modal-content">
+                <img src='./images/left-quote.png' width="35"/>
                 <p>
-                  <img src='./images/left-quote.png' width="35" style='margin-top: -15px;'/>
-                  <span>
-                    เราเลือกเทคโนโลยีที่ดีที่สุดของโลกมากมายหลายรูปแบบ<br>
-                    เข้ามาใช้ร่วมสร้างสรรค์นวัตกรรมการแสดงในครั้งนี้ เพื่อเป้าหมาย<br>
-                    ที่จะทำให้ KAAN Show ก้าวขึ้นเป็นสุดยอดการแสดง<br>ที่ผสมผสานเทคโนโลยีล้ำสมัยอันโดดเด่นแห่งหนึ่งของโลก
-                  </span>
-                  <img src='./images/right-quote.png' width="35" style='margin-bottom: 10px;'/>
+                  เราเลือกเทคโนโลยีที่ดีที่สุดของโลกมากมายหลายรูปแบบ<br>
+                  เข้ามาใช้ร่วมสร้างสรรค์นวัตกรรมการแสดงในครั้งนี้ เพื่อเป้าหมาย<br>
+                  ที่จะทำให้ KAAN Show ก้าวขึ้นเป็นสุดยอดการแสดง<br>ที่ผสมผสานเทคโนโลยีล้ำสมัยอันโดดเด่นแห่งหนึ่งของโลก
                 </p>
-                <div class="grey uppercase">อนันต์ ตรีสิริเกษม (Anant Trisirikasem)</div>
-                <div class='grey uppercase'>
-                  Executive Committee,<br> Theatre’s Technology and System Specialist
+                <img src='./images/right-quote.png' width="35" style='margin-bottom: 10px;'/>
+                <div class="grey uppercase">อนันต์ ตรีสิริเกษม<br>(Anant Trisirikasem)</div>
+                <div class='grey uppercase position'>
+                  Executive Committee, Theatre’s Technology and System Specialist
                 </div>
               </div>
             </div>
           </div>
           <div class='modal-hide-container' id='modal-link--board5'>
             <div class='modal-hide'>
-              <div class='x-modal'>X</div>
-              <img src="./images/tanapol.png" />
+              <div class='x-modal'><img src='./images/closeButtonBlack.png' /></div>
+              <div class="board-person-image" style='background-image:url("./images/tanapol.png")'></div>
               <div class="board-detail modal-content">
                 <img src='./images/left-quote.png' width="35"/>
                 <p>
@@ -267,8 +265,8 @@
           </div>
           <div class='modal-hide-container' id='modal-link--board6'>
             <div class='modal-hide'>
-              <div class='x-modal'>X</div>
-              <img src="./images/anant.png" />
+              <div class='x-modal'><img src='./images/closeButtonBlack.png' /></div>
+              <div class="board-person-image" style='background-image:url("./images/karn.png")'></div>
               <div class="board-detail modal-content">
                 <img src='./images/left-quote.png' width="35"/>
                 <p>
@@ -296,9 +294,7 @@
                 <div class='container-fluid board-container'>
                   <div class='row'>
                     <div class="board-card col-sm-4">
-                      <a href="#modal-link--board1" class='modal-trigger'>
-                        <img src="./images/Untitled-4.png" />
-                      </a>
+                      <a href="#modal-link--board1" class='modal-trigger' style='background-image:url("./images/Untitled-4.png")'></a>
                       <div class="board-detail">
                         <div class='board-detail-name'>
                           <span class="board-thai-name">ศิริวัฒน์ วงศ์จารุกร</span>
@@ -312,9 +308,7 @@
                       </div>
                     </div>
                     <div class="board-card col-sm-4">
-                      <a href="#modal-link--board2" class='modal-trigger'>
-                        <img src="./images/girl.png" />
-                      </a>
+                      <a href="#modal-link--board2" class='modal-trigger' style='background-image:url("./images/girl.png")'></a>
                       <div class="board-detail">
                         <div class='board-detail-name'>
                           <span class="board-thai-name">จินา โอสถศิลป์</span>
@@ -328,9 +322,7 @@
                       </div>
                     </div>
                     <div class="board-card col-sm-4">
-                      <a href="#modal-link--board3" class='modal-trigger'>
-                        <img src="./images/board-glass.png" />
-                      </a>
+                      <a href="#modal-link--board3" class='modal-trigger' style='background-image:url("./images/board-glass.png")'></a>
                       <div class="board-detail">
                         <div class='board-detail-name'>
                           <span class="board-thai-name">ยงยุทธ ทองกองทุน</span>
@@ -351,9 +343,7 @@
                 <div class='container-fluid board-container'>
                   <div class='row'>
                     <div class="board-card col-sm-4">
-                      <a href="#modal-link--board4" class='modal-trigger'>
-                        <img src="./images/anant.png" />
-                      </a>
+                      <a href="#modal-link--board4" class='modal-trigger' style='background-image:url("./images/anant.png")'></a>
                       <div class="board-detail">
                         <div class='board-detail-name'>
                           <span class="board-thai-name">อนันต์ ตรีสิริเกษม</span>
@@ -367,9 +357,7 @@
                       </div>
                     </div>
                     <div class="board-card col-sm-4">
-                      <a href="#modal-link--board5" class='modal-trigger'>
-                        <img src="./images/tanapol.png" />
-                      </a>
+                      <a href="#modal-link--board5" class='modal-trigger' style='background-image:url("./images/tanapol.png")'></a>
                       <div class="board-detail">
                         <div class='board-detail-name'>
                           <span class="board-thai-name">ธนพล วิระเทพสุภรณ์</span>
@@ -383,9 +371,7 @@
                       </div>
                     </div>
                     <div class="board-card col-sm-4">
-                      <a href="#modal-link--board6" class='modal-trigger'>
-                        <img src="./images/tanapol.png" />
-                      </a>
+                      <a href="#modal-link--board6" class='modal-trigger' style='background-image:url("./images/karn.png")'></a>
                       <div class="board-detail">
                         <div class='board-detail-name'>
                           <span class="board-thai-name">กานต์กฤดิชย์ นิ่มสมบุญ</span>
@@ -411,7 +397,7 @@
           <h1>OUR PARTNER</h1>
           <div class='modal-hide-container' id='modal-link--partner1'>
             <div class='modal-hide modal-hide--logo'>
-              <div class='x-modal'>X</div>
+              <div class='x-modal'><img src='./images/closeButtonBlack.png' /></div>
               <img src="./images/logo/A49@1x.png"/>
               <div class="partner-detail modal-content">
                 <h2>บริษัท สถาปนิก 49 จำกัด</h2>
@@ -430,7 +416,7 @@
           </div>
           <div class='modal-hide-container' id='modal-link--partner2'>
             <div class='modal-hide modal-hide--logo'>
-              <div class='x-modal'>X</div>
+              <div class='x-modal'><img src='./images/closeButtonBlack.png' /></div>
               <img src="./images/logo/Master_SANOOKDEE_30x27cm.png"/>
               <div class="partner-detail modal-content">
                 <h2>บริษัท สนุกดีทวีสุข จำกัด</h2>
@@ -444,7 +430,7 @@
           </div>
           <div class='modal-hide-container' id='modal-link--partner3'>
             <div class='modal-hide modal-hide--logo'>
-              <div class='x-modal'>X</div>
+              <div class='x-modal'><img src='./images/closeButtonBlack.png' /></div>
               <img src="./images/logo/XTP official logo.png"/>
               <div class="partner-detail modal-content">
                 <h2>บริษัท เอ็กซ์ทรีมพลัส จำกัด</h2>
@@ -470,7 +456,7 @@
           </div>
           <div class='modal-hide-container' id='modal-link--partner4'>
             <div class='modal-hide modal-hide--logo'>
-              <div class='x-modal'>X</div>
+              <div class='x-modal'><img src='./images/closeButtonBlack.png' /></div>
               <img src="./images/logo/logo baanrig 2012@1x.png"/>
               <div class="partner-detail modal-content">
                 <h2>บริษัท บ้านริก จำกัด</h2>
@@ -491,7 +477,7 @@
           </div>
           <div class='modal-hide-container' id='modal-link--partner5'>
             <div class='modal-hide modal-hide--logo'>
-              <div class='x-modal'>X</div>
+              <div class='x-modal'><img src='./images/closeButtonBlack.png' /></div>
               <img src="./images/logo/logo-scenario.png"/>
               <div class="partner-detail modal-content">
                 <h2>บริษัท ซีเนริโอ จำกัด</h2>
@@ -516,7 +502,7 @@
           </div>
           <div class='modal-hide-container' id='modal-link--partner6'>
             <div class='modal-hide modal-hide--logo'>
-              <div class='x-modal'>X</div>
+              <div class='x-modal'><img src='./images/closeButtonBlack.png' /></div>
               <img src="./images/logo/Panjalucl_Our Partner_RITTA logo.png"/>
               <div class="partner-detail modal-content">
                 <h2>บริษัท ฤทธา จำกัด</h2>
@@ -562,7 +548,7 @@
           </div>
           <div class='row'>
             <a href='#modal-link--partner3' class='modal-trigger'>
-              <div class='logo-box'>
+              <div class='logo-box' style="height: 120px">
                 <div class='logo-box__content'>
                   <img src='./images/logo/XTP official logo.png' width='170'>
                 </div>
@@ -570,7 +556,7 @@
               </div>
             </a>
             <a href='#modal-link--partner1' class='modal-trigger'>
-              <div class='logo-box'>
+              <div class='logo-box' style="height: 120px">
                 <div class='logo-box__content'>
                   <img src='./images/logo/A49@1x.png' width="120">
                 </div>
@@ -578,11 +564,9 @@
               </div>
             </a>
             <a href='#modal-link--partner6' class='modal-trigger'>
-              <div class='logo-box'>
+              <div class='logo-box' style="height: 120px">
                 <div class='logo-box__content'>
-
                   <img src='./images/logo/Panjalucl_Our Partner_RITTA logo.png' width="170">
-
                 </div>
                 <div class='logo-des'>RITTA</div>
               </div>
@@ -656,6 +640,7 @@
 <script type="text/javascript" src='https://cdnjs.cloudflare.com/ajax/libs/velocity/1.2.3/velocity.min.js'></script>
 <script type="text/javascript" src='https://cdnjs.cloudflare.com/ajax/libs/unslider/2.0.3/js/unslider-min.js'></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
+<script src="./js/jquery.bgswitcher.js"></script>
 <script src='./js/index.js'></script>
 
 </html>
