--- a/public/index.html
+++ b/public/index.html
@@ -583,69 +583,54 @@
               <div class='xbutton'></div>พนักงานจองตั๋ว (Reservation officer)
             </div>
             <div class="collapse-content">
+              <span class='fw400 black'>คุณสมบัติ <span style='float:right; font-style:italic; color: rgb(145, 145, 145)'>(จำนวน 5 อัตรา)</span> </span>
               <ul>
-                <li>จำนวน 5 อัตรา</li>
-                <li>
-                  คุณสมบัติ
-                  <ul>
-                    <li>เพศชาย/หญิง</li>
-                    <li>จบการศึกษาระดับปวช.ขึ้นไป</li>
-                    <li>สามารถสื่อสารภาษาอังกฤษได้และภาษาอื่นๆ ได้ จะพิจารณาเป็นพิเศษ</li>
-                    <li>มีประสบการณ์ด้านงานบริการ จะพิจารณาเป็นพิเศษ</li>
-                    <li>สามารถใช้โปรแกรม MS Office , Word , Excel พื้นฐานได้</li>
-                    <li>สามารถเข้างานเป็นกะได้</li>
-                  </ul>
-                  <li>
-                    รายละเอียดของงานที่รับผิดชอบ
-                    <ul>
-                      <li>รับจองตั๋วทางโทรศัพท์ / อีเมล และอื่นๆ</li>
-                      <li>โต้ตอบอีเมลลูกค้าทั้งชาวไทยและต่างชาติ</li>
-                      <li>ติดต่อลูกค้า บริการขายตั๋วให้บริษัททัวร์, Agent และหน่วยงานต่างๆ</li>
-                      <li>อธิบายข้อมูลของการจองตั๋วในรูปแบบต่างๆ ได้</li>
-                      <li>งานอื่นๆ ตามที่ได้รับมอบหมาย</li>
-                    </ul>
-                  </li>
+                <li>เพศชาย/หญิง</li>
+                <li>จบการศึกษาระดับปวช.ขึ้นไป</li>
+                <li>สามารถสื่อสารภาษาอังกฤษได้และภาษาอื่นๆ ได้ จะพิจารณาเป็นพิเศษ</li>
+                <li>มีประสบการณ์ด้านงานบริการ จะพิจารณาเป็นพิเศษ</li>
+                <li>สามารถใช้โปรแกรม MS Office , Word , Excel พื้นฐานได้</li>
+                <li>สามารถเข้างานเป็นกะได้</li>
+              </ul>
+                <span class='fw400 black'>รายละเอียดของงานที่รับผิดชอบ</span>
+                <ul>
+                  <li>รับจองตั๋วทางโทรศัพท์ / อีเมล และอื่นๆ</li>
+                  <li>โต้ตอบอีเมลลูกค้าทั้งชาวไทยและต่างชาติ</li>
+                  <li>ติดต่อลูกค้า บริการขายตั๋วให้บริษัททัวร์, Agent และหน่วยงานต่างๆ</li>
+                  <li>อธิบายข้อมูลของการจองตั๋วในรูปแบบต่างๆ ได้</li>
+                  <li>งานอื่นๆ ตามที่ได้รับมอบหมาย</li>
                 </ul>
-              </li>
             </ul>
           </div>
         </div>
         <div class="collapse--faq">
           <div class="collapse-header">
             <div class='xbutton'></div>ผู้จัดการโรงละคร (Theater Manager)
-            </div>
+          </div>
             <div class="collapse-content" style='display: none;'>
+              <span class='fw400 black'>คุณสมบัติ <span style='float:right; font-style:italic; color: rgb(145, 145, 145)'>(จำนวน 1 อัตรา)</span> </span>
               <ul>
-                <li>จำนวน 1 อัตรา</li>
-                <li>
-                  คุณสมบัติ
-                  <ul>
-                    <li>เพศชาย/หญิง  อายุ 35-50 ปี</li>
-                    <li>จบการศึกษาระดับปริญญาตรี / ปริญญาโทการบริหารการจัดการศิลปะ / โรงละคร บริหารธุรกิจ หรือสาขาอื่นๆ ที่เกี่ยวข้อง</li>
-                    <li>ประสบการณ์ 5 ปีในการจัดการโรงละครหรือโรงภาพยนตร์</li>
-                    <li>มีทักษะด้านการบริหารจัดการในระดับสูง</li>
-                  </ul>
-                  <li>
-                    รายละเอียดของงานที่รับผิดชอบ
-                    <ul>
-                      <li>วางแผนกลยุทธ์ในเชิงพาณิชย์และดำเนินงานการจัดการภายในของโรงละคร</li>
-                      <li>วางแผนกลยุทธ์และดำเนินงานเพื่อให้บรรลุตามเป้าหมาย</li>
-                      <li>ให้การสนับสนุนไปยังฝ่ายผลิตทั้งหมดและขับเคลื่อนกระบวนการปรับปรุงอย่างเต็มรูปแบบและมีประสิทธิภาพ</li>
-                      <li>วางแผนเชิงกลยุทธ์ในการทำงานเป็นทีมและส่งเสริมสัมพันธ์ที่ดีของพนักงานในทุกระดับ</li>
-                      <li>วางแผนเชิงกลยุทธ์ในการจัดการโรงละครรวมทั้งเรื่องการกำหนดให้มีรอบการแสดงเพื่อสอดคล้องกับฤดูการท่องเที่ยว</li>
-                      <li>วางแผนเชิงกลยุทธ์และการควบคุมแผนกิจกรรมในการพัฒนางาน ของฝ่ายการแสดงและฝ่ายสนับสนุนการแสดงและทีมงานหลังบ้าน</li>
-                      <li>รับผิดชอบยอดขายสินค้าและบริการของโรงละคร</li>
-                      <li>ดำเนินการให้โรงละครเป็นไปตามข้อกำหนดของกฎหมาย เช่น กฎหมายสุขภาพและความปลอดภัยและการออกใบอนุญาต (ผู้จัดการโรงละครอาจทำหน้าที่เป็นผู้รับใบอนุญาต)</li>
-                      <li>วางแผนกลยุทธ์ร่วมกับทีมงานด้านการตลาดและการขาย</li>
-                      <li>จัดการด้านงบประมาณและการควบคุมทางการเงินตามนโยบาย</li>
-                      <li>เจรจาต่อรองกับองค์กรภายนอกในเรื่องต่างๆ</li>
-                      <li>ประสานงานหน่วยงานท้องถิ่น, องค์กรการศึกษาและหน่วยงานอื่นที่เกี่ยวข้อง</li>
-                      <li>บริหารโรงละคร พนักงาน และทีมงานให้มีประสิทธิภาพ</li>
-                    </ul>
-                  </li>
-                </ul>
-              </li>
-            </ul>
+                <li>เพศชาย/หญิง  อายุ 35-50 ปี</li>
+                <li>จบการศึกษาระดับปริญญาตรี / ปริญญาโทการบริหารการจัดการศิลปะ / โรงละคร บริหารธุรกิจ หรือสาขาอื่นๆ ที่เกี่ยวข้อง</li>
+                <li>ประสบการณ์ 5 ปีในการจัดการโรงละครหรือโรงภาพยนตร์</li>
+                <li>มีทักษะด้านการบริหารจัดการในระดับสูง</li>
+              </ul>
+              <span class='fw400 black'>รายละเอียดของงานที่รับผิดชอบ</span>
+              <ul>
+                <li>วางแผนกลยุทธ์ในเชิงพาณิชย์และดำเนินงานการจัดการภายในของโรงละคร</li>
+                <li>วางแผนกลยุทธ์และดำเนินงานเพื่อให้บรรลุตามเป้าหมาย</li>
+                <li>ให้การสนับสนุนไปยังฝ่ายผลิตทั้งหมดและขับเคลื่อนกระบวนการปรับปรุงอย่างเต็มรูปแบบและมีประสิทธิภาพ</li>
+                <li>วางแผนเชิงกลยุทธ์ในการทำงานเป็นทีมและส่งเสริมสัมพันธ์ที่ดีของพนักงานในทุกระดับ</li>
+                <li>วางแผนเชิงกลยุทธ์ในการจัดการโรงละครรวมทั้งเรื่องการกำหนดให้มีรอบการแสดงเพื่อสอดคล้องกับฤดูการท่องเที่ยว</li>
+                <li>วางแผนเชิงกลยุทธ์และการควบคุมแผนกิจกรรมในการพัฒนางาน ของฝ่ายการแสดงและฝ่ายสนับสนุนการแสดงและทีมงานหลังบ้าน</li>
+                <li>รับผิดชอบยอดขายสินค้าและบริการของโรงละคร</li>
+                <li>ดำเนินการให้โรงละครเป็นไปตามข้อกำหนดของกฎหมาย เช่น กฎหมายสุขภาพและความปลอดภัยและการออกใบอนุญาต (ผู้จัดการโรงละครอาจทำหน้าที่เป็นผู้รับใบอนุญาต)</li>
+                <li>วางแผนกลยุทธ์ร่วมกับทีมงานด้านการตลาดและการขาย</li>
+                <li>จัดการด้านงบประมาณและการควบคุมทางการเงินตามนโยบาย</li>
+                <li>เจรจาต่อรองกับองค์กรภายนอกในเรื่องต่างๆ</li>
+                <li>ประสานงานหน่วยงานท้องถิ่น, องค์กรการศึกษาและหน่วยงานอื่นที่เกี่ยวข้อง</li>
+                <li>บริหารโรงละคร พนักงาน และทีมงานให้มีประสิทธิภาพ</li>
+              </ul>
             </div>
           </div>
           <div class="collapse--faq">
@@ -653,34 +638,26 @@
               <div class='xbutton'></div>พนักงานขายของที่ระลึก (Souvenir Shop Staff)
             </div>
             <div class="collapse-content" style='display: none;'>
+              <span class='fw400 black'>คุณสมบัติ <span style='float:right; font-style:italic; color: rgb(145, 145, 145)'>(จำนวน 5 อัตรา)</span> </span>
               <ul>
-                <li>จำนวน 5 อัตรา</li>
-                <li>
-                  คุณสมบัติ
-                  <ul>
-                    <li>เพศชาย/หญิง</li>
-                    <li>จบการศึกษาระดับปวช.ขึ้นไป</li>
-                    <li>มีประสบการณ์เกี่ยวข้องกับการจำหน่ายของที่ระลึกหรือการขาย</li>
-                    <li>มีประวัติการทำงานที่ดี ทั้งด้านผลงานและความซื่อสัตย์สุจริต</li>
-                    <li>มีความรู้ในระบบปฏิบัติงานร้านค้าปลีก</li>
-                    <li>มีความสามารถในการแก้ไขปัญหา</li>
-                    <li>ใช้คอมพิวเตอร์พื้นฐานได้</li>
-                    <li>สามารถสื่อสารภาษาอังกฤษได้ดี เพื่อรองรับลูกค้าต่างชาติ</li>
-                  </ul>
-                  <li>
-                    รายละเอียดของงานที่รับผิดชอบ
-                    <ul>
-                      <li>ขายสินค้าดูแลดิสเพลย์สินค้าให้อยู่ในสภาพที่เหมาะสม</li>
-                      <li>ดูแลความเป็นระเบียบและสวยงามทั้งในร้านและหน้าร้านให้เป็นไปตามมาตรฐานของบริษัท</li>
-                      <li>บริหารสินค้าหน้าร้านและสินค้าคงเหลือ ผลักดันยอดขายให้บรรลุเป้าหมาย</li>
-                      <li>สร้างและรักษาสัมพันธภาพที่ดีกับลูกค้า</li>
-                      <li>รายงานยอดขายและยอดสินค้าคงเหลือ สภาวะการขาย ผลการดำเนินงานของร้านและข้อมูลต่างๆ ต่อผู้บริหาร</li>
-                      <li>ปรับปรุงผลงานของพนักงานและของในร้านให้อยู่ในระดับที่ดี</li>
-                    </ul>
-                  </li>
-                </ul>
-              </li>
-            </ul>
+                <li>เพศชาย/หญิง</li>
+                <li>จบการศึกษาระดับปวช.ขึ้นไป</li>
+                <li>มีประสบการณ์เกี่ยวข้องกับการจำหน่ายของที่ระลึกหรือการขาย</li>
+                <li>มีประวัติการทำงานที่ดี ทั้งด้านผลงานและความซื่อสัตย์สุจริต</li>
+                <li>มีความรู้ในระบบปฏิบัติงานร้านค้าปลีก</li>
+                <li>มีความสามารถในการแก้ไขปัญหา</li>
+                <li>ใช้คอมพิวเตอร์พื้นฐานได้</li>
+                <li>สามารถสื่อสารภาษาอังกฤษได้ดี เพื่อรองรับลูกค้าต่างชาติ</li>
+              </ul>
+              <span class='fw400 black'>รายละเอียดของงานที่รับผิดชอบ</span>
+              <ul>
+                <li>ขายสินค้าดูแลดิสเพลย์สินค้าให้อยู่ในสภาพที่เหมาะสม</li>
+                <li>ดูแลความเป็นระเบียบและสวยงามทั้งในร้านและหน้าร้านให้เป็นไปตามมาตรฐานของบริษัท</li>
+                <li>บริหารสินค้าหน้าร้านและสินค้าคงเหลือ ผลักดันยอดขายให้บรรลุเป้าหมาย</li>
+                <li>สร้างและรักษาสัมพันธภาพที่ดีกับลูกค้า</li>
+                <li>รายงานยอดขายและยอดสินค้าคงเหลือ สภาวะการขาย ผลการดำเนินงานของร้านและข้อมูลต่างๆ ต่อผู้บริหาร</li>
+                <li>ปรับปรุงผลงานของพนักงานและของในร้านให้อยู่ในระดับที่ดี</li>
+              </ul>
             </div>
           </div>
         </div>
