--- a/public/index.html
+++ b/public/index.html
@@ -281,7 +281,7 @@
                 </p>
                 <img src='./images/right-quote.png' width="35" style='margin-bottom: 10px;'/>
                 <div class="grey uppercase">กานต์กฤดิชย์ นิ่มสมบุญ<br>(Karnkridit Nimsombun)</div>
-                <div class='grey uppercase'>
+                <div class='grey uppercase position'>
                   Managing Director
                 </div>
               </div>
@@ -583,7 +583,7 @@
               <div class='xbutton'></div>พนักงานจองตั๋ว (Reservation officer)
             </div>
             <div class="collapse-content">
-              <span class='fw400 black'>คุณสมบัติ <span style='float:right; font-style:italic; color: rgb(145, 145, 145)'>(จำนวน 5 อัตรา)</span> </span>
+              <span class='fw400 black'>คุณสมบัติ <span style='float:right; font-style:italic;'>(จำนวน 5 อัตรา)</span> </span>
               <ul>
                 <li>เพศชาย/หญิง</li>
                 <li>จบการศึกษาระดับปวช.ขึ้นไป</li>
