--- a/public/index.html
+++ b/public/index.html
@@ -73,7 +73,7 @@
         <div class='parallax'>
           <h1>CORPORATE VALUE</h1>
           <img src="" class="logo-fade-1"/>
-          <img src="" class="logo-fade-2"/>
+          <img src="" class="logo-fade-2" style='opacity: 0;'/>
           <div class='corporate-quote'>
             <div class='logo'>
               <img src='./images/logo/pun_circle.png' />
