--- a/public/index.html
+++ b/public/index.html
@@ -605,7 +605,7 @@
         </div>
         <div class="collapse--faq">
           <div class="collapse-header">
-            <div class='xbutton'></div>ผู้จัดการโรงละคร (Theater Manager)
+            <div class='xbutton'></div>ผู้จัดการโรงละคร (Theatre Manager)
           </div>
             <div class="collapse-content" style='display: none;'>
               <span class='fw400 black'>คุณสมบัติ <span style='float:right; font-style:italic; color: rgb(145, 145, 145)'>(จำนวน 1 อัตรา)</span> </span>
