--- a/public/index.html
+++ b/public/index.html
@@ -29,12 +29,12 @@
         <span></span>
       </div>
       <div class='nav-bar__navigation-container'>
-        <a href='https://kaanshow-ec4c0.firebaseapp.com/'><span class='nav-bar__navigation'>KAAN SHOW</span></a>
-        <span class='nav-bar__navigation'>D'LUCK</span>
+        <a href='https://kaanshow-ec4c0.firebaseapp.com/' target='_blank'><span class='nav-bar__navigation'>KAAN SHOW</span></a>
+        <a href='https://d-luck.firebaseapp.com/' target='_blank'><span class='nav-bar__navigation'>D'LUCK</span></a>
         <span class='nav-bar__navigation active'>PANJALUCK</span>
         <span class='nav-bar__navigation'>LANGUAGE</span>
         <span class='nav-bar__navigation'><i class='flaticon-search'></i></span>
-        <a href='https://kaanshow-ec4c0.firebaseapp.com/ticket/'><span class='nav-bar__navigation ticket'>TICKET</span></a>
+        <a href='https://kaanshow-ec4c0.firebaseapp.com/ticket/' target='_blank'><span class='nav-bar__navigation ticket'>TICKET</span></a>
       </div>
     </div>
     <div class='sections'>
@@ -163,7 +163,7 @@
           <div class='modal-hide-container' id='modal-link--board1'>
             <div class='modal-hide'>
               <div class='x-modal'><img src='./images/closeButtonBlack.png' /></div>
-              <div class="board-person-image" style='background-image:url("./images/Untitled-4.png")'></div>
+              <div class="board-person-image" style='background-image:url("./images/Panjaluck_Website (560x770px)_04-4-1 Board Profile คุณศิริวัฒน์_r11_bo.png")'></div>
               <div class="board-detail modal-content">
                 <img src="./images/left-quote.png" width="35" />
                 <p>
@@ -204,7 +204,7 @@
           <div class='modal-hide-container' id='modal-link--board3'>
             <div class='modal-hide'>
               <div class='x-modal'><img src='./images/closeButtonBlack.png' /></div>
-              <div class="board-person-image" style='background-image:url("./images/board-glass.png")'></div>
+              <div class="board-person-image" style='background-image:url("./images/Panjaluck_Website (560x770px)_04-4-3 Board Profile คุณสิน_r11_bo.png")'></div>
               <div class="board-detail modal-content">
                 <img src='./images/left-quote.png' width="35"/>
                 <p>
@@ -226,7 +226,7 @@
           <div class='modal-hide-container' id='modal-link--board4'>
             <div class='modal-hide'>
               <div class='x-modal'><img src='./images/closeButtonBlack.png' /></div>
-              <div class="board-person-image" style='background-image:url("./images/anant.png")'></div>
+              <div class="board-person-image" style='background-image:url("./images/Panjaluck_Website (560x770px)_04-4-4 Board Profile คุณอนันต์_r11_bo.png")'></div>
               <div class="board-detail modal-content">
                 <img src='./images/left-quote.png' width="35"/>
                 <p>
@@ -245,7 +245,7 @@
           <div class='modal-hide-container' id='modal-link--board5'>
             <div class='modal-hide'>
               <div class='x-modal'><img src='./images/closeButtonBlack.png' /></div>
-              <div class="board-person-image" style='background-image:url("./images/tanapol.png")'></div>
+              <div class="board-person-image" style='background-image:url("./images/Panjaluck_Website (560x770px)_04-4-5 Board Profile คุณธนพล_r11_bo.png")'></div>
               <div class="board-detail modal-content">
                 <img src='./images/left-quote.png' width="35"/>
                 <p>
@@ -266,7 +266,7 @@
           <div class='modal-hide-container' id='modal-link--board6'>
             <div class='modal-hide'>
               <div class='x-modal'><img src='./images/closeButtonBlack.png' /></div>
-              <div class="board-person-image" style='background-image:url("./images/karn.png")'></div>
+              <div class="board-person-image" style='background-image:url("./images/Panjaluck_Website (560x770px)_04-4-6 Board Profile คุณกานต์กฤดิชย์_r11_bo.png")'></div>
               <div class="board-detail modal-content">
                 <img src='./images/left-quote.png' width="35"/>
                 <p>
@@ -294,7 +294,7 @@
                 <div class='container-fluid board-container'>
                   <div class='row'>
                     <div class="board-card col-sm-4">
-                      <a href="#modal-link--board1" class='modal-trigger' style='background-image:url("./images/Untitled-4.png")'></a>
+                      <a href="#modal-link--board1" class='modal-trigger' style='background-image:url("./images/Panjaluck_Website (560x770px)_04-3-1 Board Profile คุณศิริวัฒน์_r11_bo.png")'></a>
                       <div class="board-detail">
                         <div class='board-detail-name'>
                           <span class="board-thai-name">ศิริวัฒน์ วงศ์จารุกร</span>
@@ -322,7 +322,7 @@
                       </div>
                     </div>
                     <div class="board-card col-sm-4">
-                      <a href="#modal-link--board3" class='modal-trigger' style='background-image:url("./images/board-glass.png")'></a>
+                      <a href="#modal-link--board3" class='modal-trigger' style='background-image:url("./images/Panjaluck_Website (560x770px)_04-3-3 Board Profile คุณสิน_r11_bo.png")'></a>
                       <div class="board-detail">
                         <div class='board-detail-name'>
                           <span class="board-thai-name">ยงยุทธ ทองกองทุน</span>
@@ -343,7 +343,7 @@
                 <div class='container-fluid board-container'>
                   <div class='row'>
                     <div class="board-card col-sm-4">
-                      <a href="#modal-link--board4" class='modal-trigger' style='background-image:url("./images/anant.png")'></a>
+                      <a href="#modal-link--board4" class='modal-trigger' style='background-image:url("./images/Panjaluck_Website (560x770px)_04-3-4 Board Profile คุณอนันต์_r11_bo.png")'></a>
                       <div class="board-detail">
                         <div class='board-detail-name'>
                           <span class="board-thai-name">อนันต์ ตรีสิริเกษม</span>
@@ -357,7 +357,7 @@
                       </div>
                     </div>
                     <div class="board-card col-sm-4">
-                      <a href="#modal-link--board5" class='modal-trigger' style='background-image:url("./images/tanapol.png")'></a>
+                      <a href="#modal-link--board5" class='modal-trigger' style='background-image:url("./images/Panjaluck_Website (560x770px)_04-3-5 Board Profile คุณธนพล_r11_bo.png")'></a>
                       <div class="board-detail">
                         <div class='board-detail-name'>
                           <span class="board-thai-name">ธนพล วิระเทพสุภรณ์</span>
@@ -371,7 +371,7 @@
                       </div>
                     </div>
                     <div class="board-card col-sm-4">
-                      <a href="#modal-link--board6" class='modal-trigger' style='background-image:url("./images/karn.png")'></a>
+                      <a href="#modal-link--board6" class='modal-trigger' style='background-image:url("./images/Panjaluck_Website (560x770px)_04-3-6 Board Profile คุณกานต์กฤดิชย์_r11_bo.png")'></a>
                       <div class="board-detail">
                         <div class='board-detail-name'>
                           <span class="board-thai-name">กานต์กฤดิชย์ นิ่มสมบุญ</span>
@@ -608,7 +608,7 @@
             <div class='xbutton'></div>ผู้จัดการโรงละคร (Theatre Manager)
           </div>
             <div class="collapse-content" style='display: none;'>
-              <span class='fw400 black'>คุณสมบัติ <span style='float:right; font-style:italic; color: rgb(145, 145, 145)'>(จำนวน 1 อัตรา)</span> </span>
+              <span class='fw400 black'>คุณสมบัติ <span style='float:right; font-style:italic;'>(จำนวน 1 อัตรา)</span> </span>
               <ul>
                 <li>เพศชาย/หญิง  อายุ 35-50 ปี</li>
                 <li>จบการศึกษาระดับปริญญาตรี / ปริญญาโทการบริหารการจัดการศิลปะ / โรงละคร บริหารธุรกิจ หรือสาขาอื่นๆ ที่เกี่ยวข้อง</li>
@@ -638,7 +638,7 @@
               <div class='xbutton'></div>พนักงานขายของที่ระลึก (Souvenir Shop Staff)
             </div>
             <div class="collapse-content" style='display: none;'>
-              <span class='fw400 black'>คุณสมบัติ <span style='float:right; font-style:italic; color: rgb(145, 145, 145)'>(จำนวน 5 อัตรา)</span> </span>
+              <span class='fw400 black'>คุณสมบัติ <span style='float:right; font-style:italic;'>(จำนวน 5 อัตรา)</span> </span>
               <ul>
                 <li>เพศชาย/หญิง</li>
                 <li>จบการศึกษาระดับปวช.ขึ้นไป</li>
