--- a/public/index.html
+++ b/public/index.html
@@ -33,7 +33,7 @@
         <a href='https://d-luck.firebaseapp.com/' target='_blank'><span class='nav-bar__navigation'>D'LUCK</span></a>
         <span class='nav-bar__navigation active'>PANJALUCK</span>
         <span class='nav-bar__navigation'>LANGUAGE</span>
-        <span class='nav-bar__navigation'><i class='flaticon-search'></i></span>
+        <span class='nav-bar__navigation'><img src='./images/search.png' style='width: 15px; opacity: 0.5;'/></span>
         <a href='https://kaanshow-ec4c0.firebaseapp.com/ticket/' target='_blank'><span class='nav-bar__navigation ticket'>TICKET</span></a>
       </div>
     </div>
@@ -236,7 +236,7 @@
                 </p>
                 <img src='./images/right-quote.png' width="35" style='margin-bottom: 10px;'/>
                 <div class="grey uppercase">อนันต์ ตรีสิริเกษม<br>(Anant Trisirikasem)</div>
-                <div class='grey uppercase position'>
+                <div class='grey uppercase position' style='white-space: no-wrap'>
                   Executive Committee, Theatre’s Technology and System Specialist
                 </div>
               </div>
