--- a/public/index.html
+++ b/public/index.html
@@ -34,7 +34,7 @@
         <span class='nav-bar__navigation active'>PANJALUCK</span>
         <span class='nav-bar__navigation'>LANGUAGE</span>
         <span class='nav-bar__navigation'><img src='./images/search.png' style='width: 15px; opacity: 0.5;'/></span>
-        <a href='https://kaanshow-ec4c0.firebaseapp.com/ticket/' target='_blank'><span class='nav-bar__navigation ticket'>TICKET</span></a>
+        <a href='https://kaanshow-ec4c0.firebaseapp.com/ticket/type' target='_blank'><span class='nav-bar__navigation ticket'>TICKET</span></a>
       </div>
     </div>
     <div class='sections'>
@@ -665,6 +665,91 @@
           APPLY NOW
         </div>
       </section>
+      <footer class='footer'>
+        <div class='block'>
+          <h2>SITEMAP</h2>
+          <div class="subBlock">
+            <ul>
+              <li>KAAN SHOW</li>
+              <li>INTRO TO KAAN</li>
+              <li>KAAN CLIPS</li>
+              <li>THE STORY</li>
+              <li>KAAN GALLERY</li>
+            </ul>
+          </div>
+          <div class="subBlock">
+            <ul>
+              <li>D'LUCK</li>
+              <li>ABOUT D'LUCK</li>
+              <li>GALLERY</li>
+              <li>SEATING PLAN</li>
+              <li>THEATER 360º</li>
+              <li>FACILITIES</li>
+              <li>LOCATION & MAP</li>
+            </ul>
+          </div>
+          <div class="subBlock">
+            <ul>
+              <li>PANJALUCK</li>
+              <li>OUR BUSINESS</li>
+              <li>VISION & MISSION</li>
+              <li>CORPORATE VALUE</li>
+              <li>BOARD PROFILE</li>
+              <li>OUR PARTNER</li>
+              <li>WORK WITH US</li>
+            </ul>
+          </div>
+          <div class="subBlock">
+            <ul>
+              <li>INFO & DOWNLOAD</li>
+              <li>NEWS</li>
+              <li>DOWNLOAD <br /> (PHOTO, FACT SHEET, CLIPS)</li>
+              <li>TERMS & CONDITIONS</li>
+              <li>DISCLIMER</li>
+              <li>PRIVACY</li>
+              <li>FAQ</li>
+            </ul>
+          </div>
+        </div>
+        <div class='block'>
+          <h2>CONTACT</h2>
+          <div class="subBlock" style="width: 40%;">
+            <ul>
+              <li>CONTACT</li>
+              <li>ADDRESS</li>
+              <li style='font-family:kanit;font-size:14px;'>บริษัท ปัญลักษณ์ พาสุข จำกัด <br>เลขที่ 202 อาคาร เลอ คองคอร์ด <br>ห้อง 1601 ชั้น 16 ถ.รัชดาภิเษก <br>แขวงห้วยขวาง กรุงเทพฯ 10310</li>
+            </ul>
+          </div>
+        <div class="subBlock" style="width: 30%;">
+          <ul>
+            <li>PHONE</li>
+            <li>+66 2 694 2007</li>
+            <li>+66 2 694 2008</li>
+            <li style='font-size: 18px; margin: 5px 0; opacity:1;'>FAX</li>
+            <li>+66 2 694 2009</li>
+          </ul>
+        </div>
+        <div class="subBlock" style="width: 30%;">
+          <ul>
+            <li>EMAIL</li>
+            <li>CONTACT@PANJALUCK.COM</li>
+          </ul>
+        </div>
+        <div class="contact-us-form">
+          <div class="contact-us-headline">
+            CONTACT US
+          </div>
+          <input type='text' placeholder="Enter Your Name"/>
+          <input type='text' placeholder="Enter Your Email"/>
+          <textarea type='text' placeholder="Your Message"></textarea>
+          <button type="button">SEND MESSAGE</button>
+        </div>
+        </div>
+      </footer>
+      <div class="footer-copy-right">
+        <span>© 2016 PANJALUCK PASUK CO. , LTD. ALL RIGHTS RESERVED.</span>
+        <span style='float:right;'>TO THE TOP ^</span>
+      <div>
     </div>
   </div>
   <div class='modal'>
