--- a/public/index.html
+++ b/public/index.html
@@ -702,12 +702,18 @@
           <div class="subBlock">
             <ul>
               <li>INFO & DOWNLOAD</li>
-              <li>NEWS</li>
-              <li>DOWNLOAD <br /> (PHOTO, FACT SHEET, CLIPS)</li>
-              <li>TERMS & CONDITIONS</li>
-              <li>DISCLIMER</li>
-              <li>PRIVACY</li>
-              <li>FAQ</li>
+              <li><a href="https://kaanshow-ec4c0.firebaseapp.com/info/news" target="_blank" >NEWS</a></li>
+              <li><a href="https://kaanshow-ec4c0.firebaseapp.com/info/download" target="_blank" >DOWNLOAD <br /> (PHOTO, FACT SHEET, CLIPS)</a></li>
+              <li><a href='https://kaanshow-ec4c0.firebaseapp.com/info/term' target="_blank">TERMS & CONDITIONS</a></li>
+              <li><a href='https://kaanshow-ec4c0.firebaseapp.com/info/disclaimer/' target="_blank">DISCLIMER</a></li>
+              <li><a href='https://kaanshow-ec4c0.firebaseapp.com/info/privacy/' target="_blank">PRIVACY</a></li>
+              <li><a href='https://kaanshow-ec4c0.firebaseapp.com/info/faq/' target="_blank">FAQ</a></li>
+            </ul>
+          </div>
+          <div class="subBlock">
+            <ul>
+              <li>BOOKING TICKET</li>
+              <li><a href="https://kaanshow-ec4c0.firebaseapp.com/ticket/type">PACKAGE & PROMOTION</a></li>
             </ul>
           </div>
         </div>
@@ -733,6 +739,12 @@
           <ul>
             <li>EMAIL</li>
             <li>CONTACT@PANJALUCK.COM</li>
+            <li style='margin-top:20px;'>
+              <img src='./images/fb_footer.png' style='height:25px; margin-right: 22px;'/>
+              <img src='./images/ig_footer.png' style='height:25px; margin-right: 22px;'/>
+              <img src='./images/twitter_footer.png' style='height:25px; margin-right: 5px;'/>
+            </li>
+
           </ul>
         </div>
         <div class="contact-us-form">
@@ -748,7 +760,7 @@
       </footer>
       <div class="footer-copy-right">
         <span>© 2016 PANJALUCK PASUK CO. , LTD. ALL RIGHTS RESERVED.</span>
-        <span style='float:right;'>TO THE TOP ^</span>
+        <span style='float:right;'>TO THE TOP  <img src='./images/to_top.png' width='15'onclick="window.scrollTo(0,0)"/></span>
       <div>
     </div>
   </div>
