--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,7 @@
   <link rel="stylesheet" type="text/css" href="./css/unslider.css">
   <link rel="stylesheet" type="text/css" href="./css/unsliderdots.css">
   <link rel="stylesheet" type="text/css" href="./css/flaticon.css">
+  <link rel="stylesheet" type="text/css" href="./css/normalize.css">
   <link href="https://fonts.googleapis.com/css?family=Chonburi" rel="stylesheet">
 </head>
 <body>
@@ -196,7 +197,7 @@
                 <img src='./images/right-quote.png' width="35" style='margin-bottom: 10px;'/>
                 <div class="uppercase grey">จินา โอสถศิลป์<br>(Jina Osothsilp)</div>
                 <div class='grey uppercase position'>
-                  EXECUTIVE COMMITEE
+                  EXECUTIVE COMMITTEE
                 </div>
               </div>
             </div>
@@ -316,7 +317,7 @@
                           <span class="bold board-english-name">JINA OSOTHSILP</span>
                           <br />
                           <span class="grey board-position">
-                            EXECUTIVE COMMITEE
+                            EXECUTIVE COMMITTEE
                           </span>
                         </div>
                       </div>
@@ -330,8 +331,8 @@
                           <span class="bold board-english-name">Yongyoot Thongkongtoon</span>
                           <br />
                           <span class="grey board-position">
-                            EXECUTIVE COMMITEE,<br />
-                            PRODUCER AND ARTIST DIRECTOR
+                            EXECUTIVE COMMITTEE,<br />
+                            PRODUCER AND ARTISTIC DIRECTOR
                           </span>
                         </div>
                       </div>
@@ -552,7 +553,7 @@
                 <div class='logo-box__content'>
                   <img src='./images/logo/XTP official logo.png' width='170'>
                 </div>
-                <div class='logo-des'>XTREAM PLUS</div>
+                <div class='logo-des'>XTREME PLUS</div>
               </div>
             </a>
             <a href='#modal-link--partner1' class='modal-trigger'>
@@ -640,7 +641,7 @@
             <div class="collapse-content" style='display: none;'>
               <span class='fw400 black'>คุณสมบัติ <span style='float:right; font-style:italic;'>(จำนวน 5 อัตรา)</span> </span>
               <ul>
-                <li>เพศชาย/หญิง</li>
+                <li>เพศชาย/หญิง อายุ 20 - 35 ปี</li>
                 <li>จบการศึกษาระดับปวช.ขึ้นไป</li>
                 <li>มีประสบการณ์เกี่ยวข้องกับการจำหน่ายของที่ระลึกหรือการขาย</li>
                 <li>มีประวัติการทำงานที่ดี ทั้งด้านผลงานและความซื่อสัตย์สุจริต</li>
@@ -751,8 +752,7 @@
           <div class="contact-us-headline">
             CONTACT US
           </div>
-          <input type='text' placeholder="Enter Your Name"/>
-          <input type='text' placeholder="Enter Your Email"/>
+          <input type='text' placeholder="Enter Your Name"/><input type='text' placeholder="Enter Your Email"/>
           <textarea type='text' placeholder="Your Message"></textarea>
           <button type="button">SEND MESSAGE</button>
         </div>
